--- a/pweb.html
+++ b/pweb.html
@@ -1,9 +1,1 @@
-______________________________________welcome
-works fine
-
-welcome allwelcome again
-
-
-once again					
-			
-hi
+Welcome all to my website
